# LMECA2300-Project

./: CMakeLists.txt  README.md
doc/: COMPILING.md  tutorial.md
shaders/: particles_frag.glsl  particles_geom.glsl  postpro.glsl
src/: README  README.md  SPH.c  SPH.h  SPH_operator.c  SPH_operator.h  animation.c  animation.h  boundary.c  boundary.h  consistency.c  consistency.h  derivatives.c  derivatives.h  free_surface.c  free_surface.h  kernel.c  kernel.h  list.c  list.h  main.c  particle.c  particle.h  print_particules.c  print_particules.h  time_integration.c  time_integration.h  utils.c  utils.h  vector.c  vector.h
